[package]
name = "ownership"
version = "0.1.0"
authors = ["George T. C. Lai <tsungchih.hd@gmail.com>"]
edition = "2018"

[dependencies]
# These packages are mandatory and form the core of this package’s distribution.
#cookie = "1.2.0"
#oauth = "1.1.0"
#route-recognizer = "=2.1.0"

# A list of all of the optional dependencies, some of which are included in the
# above `features`. They can be opted into by apps.
#uglifier = { version = "1.5.3", optional = true }
#bcrypt = { version = "*", optional = true }
#color = { git = "https://github.com/bjz/color-rs" }
#geometry = { path = "crates/geometry" }

# The release profile, used for `cargo build --release` (and the dependencies
# for `cargo test --release`, including the local library or binary).
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false

# The testing profile, used for `cargo test` (for `cargo test --release` see
# the `release` and `bench` profiles).
[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
#panic = 'unwind'
incremental = true
overflow-checks = true

# The benchmarking profile, used for `cargo bench` (and the test targets and
# unit tests for `cargo test --release`).
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
#panic = 'unwind'
incremental = false
overflow-checks = false

[[bin]]
name = "ownership"
